# CPP

./: README.md
FirstWorks^-^/C C++/: 1493.cpp  3значное число.cpp  CMakeLists.txt  kon'.cpp  task1740.cpp  task2001.cpp  test.cpp
FirstWorks^-^/C C++/дз/: 1086.cpp  1207.cpp  1207_final.cpp  1263.cpp  1297.cpp  13.NODnNOK.cpp  1319.cpp  1506.cpp  1576.cpp  1581.cpp  1647.cpp  2010.cpp  maxfreq.cpp  transpon.cpp
FirstWorks^-^/C C++/дз/23 12 21/: 1996.cpp  2101.cpp  Space invader.cpp
H 03.04/: 587.cpp  input.txt
H 14.05/: 241.cpp  266.cpp  418.cpp  447.cpp  472.cpp  502.cpp  60.cpp  669.cpp  997.cpp  README.md
H 16.04/: 256.cpp  344.cpp  359.cpp  475.cpp  605.cpp  README.md
H 21.05/: 145.cpp  183.cpp  42.cpp  432.cpp  527.cpp  588.cpp  704.cpp  732.cpp  911.cpp  955.cpp
H 23.04/: 122.cpp  224.cpp  267.cpp  368.cpp  868.cpp
H 26.03/: PolishNotationClass.cpp  Queue.cpp  Stones.cpp  VersionStack.cpp
H 28.05/: 127.cpp  255.cpp  268.cpp  414.cpp  679.cpp  954.cpp  Seminar1.cpp  Seminar2.cpp
H 30.04/: 196.cpp  20.cpp  202.cpp  74.cpp  889.cpp
H 31.03/: 149.cpp  597.cpp  685.cpp  892.cpp  970.cpp  README.md
H 4.06/: 150.cpp  216.cpp  269.cpp  334.cpp  335.cpp  470.cpp  510.cpp  666.cpp  936.cpp  96.cpp
H 4.06/Client/: CMakeLists.txt  main.cpp
H 4.06/Seminar/Client/: CMakeLists.txt  functions.h  main.cpp
H 4.06/Seminar/Server/: CMakeLists.txt  Server.h  User.h  main.cpp
H 4.06/Server/: main.cpp
H 7.05/: 136.cpp  172.cpp  228.cpp  281.cpp  352.cpp  913.cpp
PolishNotation/: PolishNotationClass.h  PolishNotationMain.cpp  Polish_notation.cpp
(+8 files in other folders)
